# multi-label-partition

./: .gitignore  CMakeLists.txt
include/: material_interface.hpp  project_polylines_on_mesh.hpp  tet_mesh.hpp
src/: main.cpp  material_interface.cpp
